--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.9.0
   motion_tab_bar: ^2.0.4
+  font_awesome_flutter: ^10.7.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
