--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   path: ^1.9.0
   motion_tab_bar: ^2.0.4
   font_awesome_flutter: ^10.7.0
+  provider: ^6.0.5
+  curved_navigation_bar: ^1.0.6
 
 
 
