--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   provider: ^6.0.5
   curved_navigation_bar: ^1.0.6
+  google_maps_flutter: ^2.2.3
+  google_maps_flutter_platform_interface: ^2.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -67,6 +69,7 @@ flutter:
   assets:
    - assets/images/logo.png
    - assets/images/google.png
+   - assets/images/paypal_logo.png
    - assets/images/categories/
    - assets/images/products/
 
